# tinyopt

./: CMakeLists.txt  README.md  tinyoptConfig.cmake
examples/: plot_quadratic_example.py  plot_rosebrock_example.py  quadratic.cpp  rosenbrock.cpp
include/: RandomSearch.hpp
test/: main.cpp
